<resources>
   <string name="app_name">Karar ve Dongu Yapiları</string>
    <string name="Uyg1_name">uygulama1 KararveDonguYapiları</string>
    <string name="Uyg2_name">uygulama2 KararveDonguYapiları</string>
    <string name="Uyg3_name">uygulama3 KararveDonguYapiları</string>
    <string name="Uyg4_name">uygulama4 KararveDonguYapiları</string>
    <string name="Uyg5_name">uygulama5 KararveDonguYapiları</string>
    <string name="Uyg6_name">uygulama6 KararveDonguYapiları</string>
    <string name="Uyg7_name">uygulama7 KararveDonguYapiları</string>
    <string name="Uyg8_name">uygulama8 KararveDonguYapiları</string>
    <string name="Uyg9_name">uygulama9 KararveDonguYapiları</string>
    <string name="Uyg10_name">uygulama10 KararveDonguYapiları</string>

</resources>
